--- a/application/templates/delivery/ActiveOrder.html
+++ b/application/templates/delivery/ActiveOrder.html
@@ -1,46 +1,51 @@
 {% extends "deliverylayout.html" %}
-{% block title %}{{store.name}} Order Details View - MediCart {% endblock %}
+{% block title %}{{ store.name }} Order Details - SmartEats{% endblock %}
+
 {% block content %}
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7054933627312511"
-     crossorigin="anonymous"></script>
-<h1>{{current_user.names}} Deliveries</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Order ID</th>
-                <th>Customer</th>
-                <th>Address</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-        {%if not deliveries%}
-    <p>You have no active deliveries.</p>
-        {%else%}
-            {% for delivery in deliveries %}
-            <tr>
-                <td>{{ delivery.order_id }}</td>
-                <td>{{ delivery.customer_name }}</td>
-             
-                <td>{{ delivery.address }}</td>
-                <td>
-                <form action="{{url_for('delivery.update_delivery', delivery_id=delivery.id)}}" method="POST">
+<h1 class="mb-4">{{ current_user.names }}'s Deliveries</h1>
 
-                    <div class="form-group">
-                        {{ myform.hidden_tag() }}
-                       {{myform.status(class='form-control')}}
-                       {{myform.delivery_prove.label}}
-                       {{myform.delivery_prove(class='form-control')}}
-                       {{myform.submit(class='btn btn-outline-success rounded-pill')}}
-                        </div>
-                </form>
+{% if not deliveries %}
+    <div class="alert alert-info">
+        You have no active deliveries.
+    </div>
+{% else %}
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead class="table-success">
+                <tr>
+                    <th>Order ID</th>
+                    <th>Customer</th>
+                    <th>Address</th>
+                    <th>Update Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for delivery in deliveries %}
+                <tr>
+                    <td>{{ delivery.order_id }}</td>
+                    <td>{{ delivery.customer_name }}</td>
+                    <td>{{ delivery.address }}</td>
+                    <td>
+                        <form action="{{ url_for('delivery.update_delivery', delivery_id=delivery.id) }}" method="POST" class="d-flex flex-column gap-2">
+                            {{ myform.hidden_tag() }}
 
-</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-{%endif%}
+                            <div class="mb-2">
+                                {{ myform.status.label(class="form-label") }}
+                                {{ myform.status(class="form-select") }}
+                            </div>
 
-{%endblock%}
+                            <div class="mb-2">
+                                {{ myform.delivery_prove.label(class="form-label") }}
+                                {{ myform.delivery_prove(class="form-control") }}
+                            </div>
 
+                            {{ myform.submit(class="btn btn-success btn-sm rounded-pill") }}
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endif %}
+{% endblock %}
